# huda-feature-extractor

./: README.md  beautifulsoup_parser.py  config.yaml  main.py  pyproject.toml
src/feature_evaluator/: __init__.py
