[project]
name = "feature-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Boubacar Ballo", email = "bab9755@nyu.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.7.6",
]

[project.scripts]
feature-evaluator = "feature_evaluator:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
